# antbook-rust

./: Cargo.toml  dot.html  example.html  template.html
src/: 1_1.rs  1_6_ant.rs  1_6_triangle.rs  2_1_bfs_walk_2d.rs  2_1_lake_counting.rs  2_1_lake_counting_walk_2d.rs  2_1_permutation.rs  2_1_subsetsum.rs  binary_indexed_tree.rs  binary_search.rs  dot_log.rs  heap.rs  lazy_segtree.rs  lib.rs  maximum_flow.rs  minimum_cost_flow.rs  modulo.rs  proportional_lazy_segtree.rs  segtree.rs  segtree_lazy.rs  segtree_proportional_lazy.rs  shortest_path.rs  walk_2d.rs
