[package]
name = "antbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = { version = "=0.4.3", features = ["derive"] }
itertools = "=0.9.0"

[[bin]]
name = "1_1"
path = "src/1_1.rs"

[[bin]]
name = "1_6_triangle"
path = "src/1_6_triangle.rs"

[[bin]]
name = "1_6_ant"
path = "src/1_6_ant.rs"

[[bin]]
name = "binary_search"
path = "src/binary_search.rs"

[[bin]]
name = "2_1"
path = "src/2_1.rs"

[[bin]]
name = "2_1_subsetsum"
path = "src/2_1_subsetsum.rs"

[[bin]]
name = "2_1_lake_counting"
path = "src/2_1_lake_counting.rs"

[[bin]]
name = "2_1_bfs"
path = "src/2_1_bfs.rs"

[lib]
name = "walk_2d"
path = "src/walk_2d.rs"

[[bin]]
name = "2_1_lake_counting_walk_2d"
path = "src/2_1_lake_counting_walk_2d.rs"

[[bin]]
name = "2_1_bfs_walk_2d"
path = "src/2_1_bfs_walk_2d.rs"

[[bin]]
name = "2_1_permutation"
path = "src/2_1_permutation.rs"
