[package]
name = "antbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


# https://github.com/rust-lang-ja/atcoder-rust-resources/wiki/2020-Update
[dependencies]
proconio = { version = "=0.4.3", features = ["derive"] }
itertools = "=0.9.0"
itertools-num = "=0.1.3"
petgraph = "=0.5.0"
num = "=0.4.0"
maplit = "=1.0.2"
superslice = "=1.0.0"
ordered-float = "=1.1.1"
bitset-fixed = "=0.1.0"
fixedbitset = "=0.2.0"
ndarray = "=0.13.0"

# not included in atcoder rust resources
assert_approx_eq = "1.1.0"
once_cell = "1.16.0"